# iov-mp-hamonyos-app

./: .gitignore  README.md  build-profile.json5  oh-package-lock.json5  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
app/: build-profile.json5  oh-package-lock.json5  oh-package.json5
app/src/main/: module.json5
app/src/main/cpp/: CMakeLists.txt  napi_init.cpp
app/src/main/cpp/types/libapp/: Index.d.ts  oh-package.json5
app/src/main/ets/: Index.ets
app/src/main/ets/appability/: AppAbility.ets
app/src/main/ets/common/: Constants.ets
app/src/main/ets/component/bar/: TopBackTitleBar.ets
app/src/main/ets/component/button/: RoundedCornerButton.ets
app/src/main/ets/component/textfield/: MobileTextField.ets  OtpTextField.ets
app/src/main/ets/data/bean/: HttpBean.ets  MockBean.ets
app/src/main/ets/data/http/: NetworkManager.ets  TspApi.ets  TspManager.ets
app/src/main/ets/module/login/: LoginMobileStep1Page.ets  LoginMobileStep2Page.ets  LoginViewModel.ets
app/src/main/ets/module/my/page/: MyPage.ets  MyPage_Login.ets  MyPage_NotLogin.ets  (+1 more)
app/src/main/ets/theme/: Theme.ets
app/src/main/ets/utils/: DerEncoder.ets  GlobalStateManager.ets  SecurityManager.ets  UserManager.ets
app/src/main/ets/widget/: TopBackTitleBar.ets
app/src/main/resources/base/element/: color.json  string.json
app/src/main/resources/base/profile/: main_pages.json
app/src/main/resources/en_US/element/: string.json
app/src/main/resources/zh_CN/element/: string.json
app/src/mock/: mock-config.json5
app/src/ohosTest/: module.json5
(+2 files in other folders)
